--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@
     height: 700px;
 }
 
+.hero-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
+    height: 700px;
+    border-style: solid;
+    margin-top: 35px;
+}
+
 .card1 {
     margin-left: 100px;
     margin-right: auto;
@@ -68,4 +78,22 @@
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
+    border-style: solid;
+    background-color: #000099;
+}
+
+.container-fluid {
+    background-color: #000099;
+    border-style: solid;
+}
+
+.subhead {
+    border-style: solid;
+    display: inline;
+    background-color: #000099;
+}
+
+.hobby-info {
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
