--- a/style.css
+++ b/style.css
@@ -79,18 +79,18 @@
     margin-bottom: 50px;
     text-align: center;
     border-style: solid;
-    background-color: #000099;
+    background-color: #0404c9;
 }
 
 .container-fluid {
-    background-color: #000099;
+    background-color: #0404c9;
     border-style: solid;
 }
 
 .subhead {
     border-style: solid;
     display: inline;
-    background-color: #000099;
+    background-color: #0404c9;
 }
 
 .hobby-info {
